crates/viewer/re_component_fallbacks/tests/snapshots/all_component_fallbacks__arch_fallback_rerun.archetypes.EncodedImage.snap
---
source: crates/viewer/re_component_fallbacks/tests/all_component_fallbacks.rs
expression: arch_display
---
blob: [[0]]
media_type: [application/octet-stream]
opacity: [1.0]
draw_order: [-10.0]
