crates/viewer/re_component_fallbacks/tests/snapshots/all_component_fallbacks__arch_fallback_rerun.archetypes.GeoPoints.snap
---
source: crates/viewer/re_component_fallbacks/tests/all_component_fallbacks.rs
expression: arch_display
---
[
    (
        "positions",
        [
            "[0.0, 0.0]",
        ],
    ),
    (
        "radii",
        [
            "-5.0",
        ],
    ),
    (
        "colors",
        [
            "2428259839",
        ],
    ),
    (
        "class_ids",
        [
            "0",
        ],
    ),
]
