crates/viewer/re_component_fallbacks/tests/snapshots/all_component_fallbacks__arch_fallback_rerun.archetypes.GraphEdges.snap
---
source: crates/viewer/re_component_fallbacks/tests/all_component_fallbacks.rs
expression: arch_display
---
[
    (
        "edges",
        [
            "{first: , second: }",
        ],
    ),
    (
        "graph_type",
        [
            "1",
        ],
    ),
]
