crates/viewer/re_component_fallbacks/tests/snapshots/all_component_fallbacks__arch_fallback_rerun.archetypes.LineStrips3D.snap
---
source: crates/viewer/re_component_fallbacks/tests/all_component_fallbacks.rs
expression: arch_display
---
[
    (
        "strips",
        [
            "[]",
        ],
    ),
    (
        "radii",
        [
            "0.5",
        ],
    ),
    (
        "colors",
        [
            "2428259839",
        ],
    ),
    (
        "labels",
        [
            "",
        ],
    ),
    (
        "show_labels",
        [
            "true",
        ],
    ),
    (
        "class_ids",
        [
            "0",
        ],
    ),
]
