crates/viewer/re_component_fallbacks/tests/snapshots/all_component_fallbacks__arch_fallback_rerun.archetypes.McapChannel.snap
---
source: crates/viewer/re_component_fallbacks/tests/all_component_fallbacks.rs
expression: arch_display
---
[
    (
        "id",
        [
            "0",
        ],
    ),
    (
        "topic",
        [
            "",
        ],
    ),
    (
        "message_encoding",
        [
            "",
        ],
    ),
    (
        "metadata",
        [
            "[]",
        ],
    ),
]
